--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9567,6 +9567,10 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+#stylebox{
+padding: auto; 
+}
+
 .divider-custom {
   margin: 1.25rem 0 1.5rem;
   width: 100%;
