--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9568,7 +9568,8 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 #stylebox{
-padding: auto; 
+padding: auto;
+text-align: center;
 }
 
 .divider-custom {
